<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome"
            android:textColor="@color/primary_txt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/sign_in"
            android:textColor="@color/secondary_txt"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Email_input"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_txt"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/pwd_input"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_txt"
            android:textSize="13sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:onClick="loginPressed"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <!--TODO: change color scheme later on-->

    </LinearLayout>
    

</ScrollView>